Fixed these issues: Info button not visible with long text? Info button should only open this info screen, not all of them Info screen/text should be scrollable Center the logo in the backend index page Indicator for the logo position

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -71,14 +71,15 @@ h2 {
 	width: 114px;
 	height: 82px;
 	cursor: pointer;
-	/*background-image: url(../img/logo.png);*/
 }
 .index-logo img {
 	height: 100%;
 }
+.index-logo.selected img {
+	border-bottom: 2px solid #ff0099;
+}
 .logo-left {
 	float: left;
-	padding-left: 10px;
 }
 .logo-center {
 	float: none;
@@ -87,7 +88,6 @@ h2 {
 }
 .logo-right {
 	float: right;
-	padding-right: 10px
 }
 .container-fluid {
 	height: 100%;
@@ -193,7 +193,7 @@ div.mce-tinymce.mce-container.mce-panel {
 }
 .index-foreground img {
 	max-height: 40%;
-	max-width: 40%;
+	/*max-width: 40%;*/
 }
 .index-background {
     position: relative;
